# GSM_Mobile_money_simulator

./: CMakeLists.txt  README.md
data/: index.html
main/: CMakeLists.txt  main.c
scripts_other/: indexhtmlold2.txt  indexold.txt  indexold4final.txt  old.txt  ussd_gateway.py  ussd_gateway_with_random_forest_enhanced.py
scripts_other/files/: CHANGELOG_v3.1.md  LIVRAISON_FINALE_v3.1.md  SYNTHESE_LIVRAISON_COMPLETE.md  dashboard_ia_ussd_v3.1.py  ussd_gateway_with_random_forest_v3.1.py
